  sufficient for the use case
- bugfixes imported from earlier releases
  * bugfix: named pipes did no longer work (they always got an open error)
    this was a regression from the omfile rewrite in 4.5.0
  * bugfix(testbench): sequence check was not always performed correctly,
    that could result in tests reporting success when they actually failed
- [inport v4] improved testbench, contains now tcp and gzip test cases
- [import v4] added a so-called "On Demand Debug" mode, in which debug
  output can be generated only after the process has started, but not right
  from the beginning. This is assumed to be useful for hard-to-find bugs.
  Also improved the doc on the debug system.
---------------------------------------------------------------------------
Version 5.3.4  [DEVEL] (rgerhards), 2009-11-04
- added the ability to create custom message parsers
- added $RulesetParser config directive that permits to bind specific
  parsers to specific rulesets
- added omruleset output module, which provides great flexibility in 
  action processing. THIS IS A VERY IMPORTANT ADDITION, see its doc
  for why.
- added the capability to have ruleset-specific main message queues
  This offers considerable additional flexibility AND superior performance
  (in cases where multiple inputs now can avoid lock contention)
- bugfix: correct default for escape ('#') character restored
  This was accidently changed to '\\', thanks to David Lang for reporting
- bugfix(testbench): testcase did not properly wait for rsyslogd shutdown
  thus some unpredictable behavior and a false negative test result
  could occur.
---------------------------------------------------------------------------
Version 5.3.3  [DEVEL] (rgerhards), 2009-10-27
- simplified and thus speeded up the queue engine, also fixed some
  potential race conditions (in very unusual shutdown conditions)
  along the way. The threading model has seriously changes, so there may
  be some regressions.