@@ -8,6 +8,7 @@ Version 5.3.5  [DEVEL] (rgerhards), 2009-11-??
     this was a regression from the omfile rewrite in 4.5.0
   * bugfix(testbench): sequence check was not always performed correctly,
     that could result in tests reporting success when they actually failed
+- doc bugfix: omudpspoof had wrong config command names ("om" missing)
 - [inport v4] improved testbench, contains now tcp and gzip test cases
 - [import v4] added a so-called "On Demand Debug" mode, in which debug
   output can be generated only after the process has started, but not right
